--- a/styles.css
+++ b/styles.css
@@ -50,27 +50,26 @@ body {
 
 
 .footer {
-  color: #fff;
-  text-align: center;
-  padding: 2px 0;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  transition: height 0.3s ease-in-out;
-  overflow: hidden;
-  border-radius: 15px 15px 0 0;
-  backdrop-filter: blur(2px) saturate(200%);
-  -webkit-backdrop-filter: blur(2px) saturate(200%);
-  background-color: rgba(255, 255, 255, 0.23)
-
-}
-
-.footer a {
-  color: #fff;
-  text-decoration: none;
+    color: #fff;
+    text-align: center;
+    padding: 2px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    transition: height 0.3s ease-in-out;
+    border-radius: 35px 35px 0 0;
+    overflow: hidden;
+    backdrop-filter: blur(2px) saturate(200%);
+    -webkit-backdrop-filter: blur(2px) saturate(200%);
+    background-color: rgba(255, 255, 255, 0.23);
+    transition: background-color 0.3s ease;
+  }
   
-}
+  .footer a {
+    color: #fff;
+    text-decoration: none;
+  }
 
 
 a {
